--- a/demo/native/Cargo.toml
+++ b/demo/native/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "demo"
-version = "0.1.0"
-edition = "2018"
+version = "0.2.0"
+edition = "2021"
 authors = ["Patrick Walton <pcwalton@mimiga.net>"]
 
 [features]
@@ -10,10 +10,10 @@ pf-no-simd = ["pathfinder_simd/pf-no-simd"]
 
 [dependencies]
 color-backtrace = "0.3"
-gl = "0.14"
 lazy_static = "1"
 nfd = "0.0.4"
 pretty_env_logger = "0.4"
+wgpu = "0.15.1"
 
 [dependencies.euclid]
 version = "0.20"
@@ -24,9 +24,6 @@ path = "../common"
 
 [dependencies.pathfinder_geometry]
 path = "../../geometry"
-
-[dependencies.pathfinder_gl]
-path = "../../gl"
 
 [dependencies.pathfinder_gpu]
 path = "../../gpu"
@@ -50,9 +47,6 @@ foreign-types = "0.3"
 io-surface = "0.12"
 metal = "0.18"
 objc = "0.2"
-
-[target.'cfg(target_os = "macos")'.dependencies.pathfinder_metal]
-path = "../../metal"
 
 [target.'cfg(not(windows))'.dependencies]
 jemallocator = "0.3"
