--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "pathfinder_renderer"
-version = "0.5.0"
-edition = "2018"
-authors = ["Patrick Walton <pcwalton@mimiga.net>"]
+version = "0.6.0"
+edition = "2021"
+authors = ["Patrick Walton <pcwalton@mimiga.net>, floppyhammer <tannhauser_chen@outlook.com>"]
 description = "A GPU-accelerated vector graphics and font renderer"
 license = "MIT/Apache-2.0"
 repository = "https://github.com/servo/pathfinder"
@@ -22,6 +22,7 @@ serde = "1.0"
 serde_json = "1.0"
 smallvec = "1.2"
 vec_map = "0.8"
+wgpu = "0.15.1"
 
 [dependencies.instant]
 version = "0.1"
@@ -41,7 +42,7 @@ version = "0.5"
 
 [dependencies.pathfinder_gpu]
 path = "../gpu"
-version = "0.5"
+version = "0.6"
 
 [dependencies.pathfinder_resources]
 path = "../resources"
